change p tag in lower case and add p tags

--- a/index.html
+++ b/index.html
@@ -43,29 +43,28 @@
             </div>
         </div>
     <div id="para1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptates neque eligendi architecto et
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptates neque eligendi architecto et
         consequatur aperiam saepe dignissimos possimus tempora? Doloribus placeat rerum odit ipsa reiciendis nulla optio
-        culpa fugiat.
+            culpa fugiat</p>
     </div>
     <div id="para2">
         <h3>PRODUCT DETAILS</h3>
-        <P><strong>paperback:</strong> 12</P>
-        <P><strong>publisher:</strong>Amazon digital services LLC(october 25,2013)</P>
-        <P><strong>ISBN-10:</strong>B00G7MXV92</P>
-        <P><strong>product dimensions:</strong>4x4x4</P>
-        <P><strong>Shippingweight:</strong>9 ounces</P>
-        <P><strong>Average customer review:</strong></P>
+        <p><strong>paperback:</strong> 12</p>
+        <p><strong>publisher:</strong>Amazon digital services LLC(october 25,2013)</p>
+        <p><strong>product dimensions:</strong>4x4x4</p>
+        <p><strong>Shippingweight:</strong>9 ounces</p>
+        <p><strong>Average customer review:</strong></p>
 
     </div>
     <div id="para3">
         <h4>About the Author</h4>
-        <strong>Lorem ipsum</strong>, dolor sit amet consectetur adipisicing elit. Quo ratione illo voluptatum optio
+        <p><strong>Lorem ipsum</strong>, dolor sit amet consectetur adipisicing elit. Quo ratione illo voluptatum optio
         nobis inventore laudantium, accusamus nostrum molestias porro quaerat officiis fuga, ipsam magni voluptates
         quae, doloremque voluptatibus obcaecati?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dolores ea, ex ipsum fugit qui, amet possimus
         dicta corrupti est harum eum magnam, tenetur voluptatem cupiditate recusandae nulla architecto sint.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ullam, nobis quibusdam culpa eum qui delectus
-        unde aut a dolore earum vitae cupiditate ipsam laboriosam natus, dolores, corporis minima laudantium!
+        unde aut a dolore earum vitae cupiditate ipsam laboriosam natus, dolores, corporis minima laudantium!</p>
     </div>
 
 </body>
