--- a/index.html
+++ b/index.html
@@ -15,24 +15,28 @@
 </head>
 
 <body>
-    <header class="top-right">
-        <ul>
-            <li><a href="#"><strong>CATEGORIES</strong></a></li>
-            <li><a href="#"><strong>MY CART</strong></a></li>
-            <li><a href="#"><strong>REQUEST A BOOK</strong></a></li>
-            <li><a href="#"><strong>CONTACT US</strong></a></li>
-        </ul>
+    <header>
+        <div id="nav">
+            <nav>
+               <ul>
+                  <li><a href="#"><strong>CATEGORIES</strong></a></li>
+                  <li><a href="#"><strong>MY CART</strong></a></li>
+                  <li><a href="#"><strong>REQUEST A BOOK</strong></a></li>
+                  <li><a href="#"><strong>CONTACT US</strong></a></li>
+               </ul>
+            </nav>
+        </div>
     </header>
     
         <div id="section1">
-            <div class="book.logo">
-                <img src="images/book-item.jpg" alt="book-logo">
-            </div>
+                <div class="book.logo">
+                   <img src="images/book-item.jpg" alt="book-logo">
+                 </div>
         </div>
         <div id="section2">
             <div id="first-heading">
                 <h3>MY MONSTER FARTS</h3>
-                <P>by kate clary</P>
+                <p>by kate clary</p>
             </div>
             <div id="second-heading">
                 <h4>paperback price $</h4>
