--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
     </header>
     
-        <div id="section1">
+        <div id="main">
                 <div class="book.logo">
                    <img src="images/book-item.jpg" alt="book-logo">
                  </div>
-        </div>
+        
         <div id="section2">
             <div id="first-heading">
                 <h3>MY MONSTER FARTS</h3>
@@ -46,6 +46,7 @@
 
             </div>
         </div>
+    </div>
     <div id="para1">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptates neque eligendi architecto et
         consequatur aperiam saepe dignissimos possimus tempora? Doloribus placeat rerum odit ipsa reiciendis nulla optio
