--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     
-        <div id="main">
+        <main>
                 <div class="book.logo">
                    <img src="images/book-item.jpg" alt="book-logo">
                  </div>
@@ -46,7 +46,7 @@
 
             </div>
         </div>
-    </div>
+    </main>
     <div id="para1">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptates neque eligendi architecto et
         consequatur aperiam saepe dignissimos possimus tempora? Doloribus placeat rerum odit ipsa reiciendis nulla optio
