--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     
         <main>
-                <div class="book.logo">
+                <div class="book-logo">
                    <img src="images/book-item.jpg" alt="book-logo">
                  </div>
         
