--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="nav">
-            <div id="hamburger"><i class="fas fa-bars"></i></div>
+            <div class="hamburger"><i id="hamburger" class="fas fa-bars"></i></div>
             <nav>
                <ul>
                   <li><a href="#"><strong>CATEGORIES</strong></a></li>
