--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </div>
     </header>
-    
+    <section>
         <main>
                 <div class="book-logo">
                    <img src="images/book-item.jpg" alt="book-logo">
@@ -75,7 +75,7 @@
              unde aut a dolore earum vitae cupiditate ipsam laboriosam natus, dolores, corporis minima laudantium!</p>
         </div>
     </div>
-
+    </section>
 </body>
 
 </html>
