--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 <body>
     <header>
+       <figure>
+            <img src="https://cdn2.vectorstock.com/i/1000x1000/76/11/cute-panda-face-logo-vector-12817611.jpg">
+            <figcaption><strong>Book panda</strong><figcaption>
+         </figure>
         <div id="nav">
             <div class="hamburger"><i id="hamburger" class="fas fa-bars"></i></div>
             <nav>
