--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
        <figure>
-            <img src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/2796048/910/607/m1/fpnw/wm0/1-.jpg?1496515548&s=f4bbfb3019181c6caabb1e7c9af39016">
+            <img id="logo" src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/2796048/910/607/m1/fpnw/wm0/1-.jpg?1496515548&s=f4bbfb3019181c6caabb1e7c9af39016">
             <figcaption><strong>Book panda</strong><figcaption>
          </figure>
         <div id="nav">
