--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="first-heading">
                 <h3>MY MONSTER FARTS</h3>
                    <p>by kate clary</p>
-                 <img src="https://www.pngkey.com/png/detail/403-4030277_five-stars-five-star-rating-png.png">
+                 <img id="star" src="https://www.pngkey.com/png/detail/403-4030277_five-stars-five-star-rating-png.png">
             </div>
             <div id="second-heading">
                 <h4>paperback price $</h4>
@@ -66,7 +66,7 @@
              <p><strong>publisher:</strong>Amazon digital services LLC(october 25,2013)</p>
              <p><strong>product dimensions:</strong>4x4x4</p>
              <p><strong>Shippingweight:</strong>9 ounces</p>
-             <p><strong>Average customer review:</strong><img src="https://www.pngkey.com/png/detail/403-4030277_five-stars-five-star-rating-png.png"></p>
+             <p><strong>Average customer review:</strong><img id="ratting-stars" src="https://www.pngkey.com/png/detail/403-4030277_five-stars-five-star-rating-png.png"></p>
 
          </div>
        <div id="para3">
