--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
        <div id="para1">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptates neque eligendi architecto et
             consequatur aperiam saepe dignissimos possimus tempora? Doloribus placeat rerum odit ipsa reiciendis nulla optio
-            culpa fugiat</p>
+                culpa fugiat<a href="#">Read more...</a></p>
         </div>
         <div id="para2">
              <h3>PRODUCT DETAILS</h3>
