--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section>
         <main>
                 <div class="book-logo">
-                   <img src="images/book-item.jpg" alt="book-logo">
+                   <img id="logo-img" src="images/book-item.jpg" alt="book-logo">
                  </div>
         
         <div id="section2">
