--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <body>
     <header>
-       <figure>
-            <img id="logo" src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/2796048/910/607/m1/fpnw/wm0/1-.jpg?1496515548&s=f4bbfb3019181c6caabb1e7c9af39016">
-            <figcaption><strong>Book panda</strong><figcaption>
-         </figure>
+      <div id="logo">
+            <img class="logo" src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/2796048/910/607/m1/fpnw/wm0/1-.jpg?1496515548&s=f4bbfb3019181c6caabb1e7c9af39016">
+            <h2>Book panda</h2>
+                </div>
         <div id="nav">
             <div class="hamburger"><i id="hamburger" class="fas fa-bars"></i></div>
             <nav>
